--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h3>I'm Harinee</h3>
         <span class="tag">Web Developer</span>
         
-        <p>Passionate and proactive Software Developer with a keen interest in Technology. Proficient in programming skills. Looking for Internship opportunities to advance my skills and apply them practically. Eager to learn, collaborate, and grow within a dynamic team environment. </p>
+        <p>Motivated Software Developer focused on full stack development with experience in building end-to-end web applications. Skilled in writing clean, maintainable code. Committed to continuous growth and improvement.</p>
         
         <div class="box-container">
             <div class="box">
@@ -145,7 +145,7 @@
 <!-- work project section starts -->
 <section class="work" id="work">
 
-  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
+  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Built</span></h2>
 
   <div class="box-container">
 
