--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="content">
     <h2>Hi There,<br/> I'm Harinee S</h2>
-    <p>i am into <span class="typing-text">Full Stack</span></p>
+    <p>i am into <span >Full Stack Development</span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
     </a>
